# task-Abistep

./: parser_config.json  psn_games_example.json
.github/workflows/: integration.yml  publish.yml
parser/: pyproject.toml
parser/parser/: logger.py  main.py  psn_parser.py
